# uav-collision-avoidance

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.pl.md  SECURITY.md  compile.ps1  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-publish.yml
assets/: README.md
data/: README.md  simulation-2024-04-29-23-14-57.csv  simulation-2024-05-06-19-22-46.csv  simulation-2024-05-08-14-07-33.csv  simulation-2024-05-14-11-42-37.csv  simulation-2024-05-15-17-37-59.csv  simulation-2024-05-27-22-38-23.csv  simulation-2024-05-28-17-03-42.csv  simulation-2024-05-31-00-00-37.csv  simulation-2024-05-31-12-58-35.csv  simulation-2024-06-02-17-52-28.csv  simulation-2024-06-02-21-36-15.csv  simulation-2024-06-08-15-52-45.csv  simulation-2024-06-10-00-21-19.csv
docs/: README.md
docs/en/: README.md
docs/pl/: README.md
path-visual/: README.md
path-visual/2024-05-31/simulation-00-00-618986396/: README.md
path-visual/2024-05-31/simulation-00-01-618986396/: README.md
path-visual/2024-05-31/simulation-00-02-618986396/: README.md
path-visual/2024-05-31/simulation-00-03-618986396/: README.md
path-visual/2024-05-31/simulation-00-04-618986396/: README.md
path-visual/2024-05-31/simulation-00-05-618986396/: README.md
path-visual/2024-05-31/simulation-00-06-618986396/: README.md
path-visual/2024-05-31/simulation-00-07-618986396/: README.md
path-visual/2024-05-31/simulation-00-08-618986396/: README.md
python_package_template/: __init__.py  main.py
python_package_template/src/: classname.py
tests/: __init__.py  test_headless.py  test_sample.py
uav_collision_avoidance/: __init__.py  main.py  version.py
uav_collision_avoidance/docs/: conf.py  index.rst  requirements.in  requirements.txt
uav_collision_avoidance/src/: aircraft.py  fps_counter.py  settings.py  simulator.py  simulator_threads.py
(+80 files in other folders)
