[build-system]
requires = [
    "PySide6==6.7.0",
    "setuptools>=61.0",
    "toml>=0.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "uav-collision-avoidance"
version = "0.6.0"
authors = [
  { name="mldxo", email="miloszmaculewicz@gmail.com" },
]
description = "UAV collision avoidance simulation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
uav-collision-avoidance = "uav_collision_avoidance:main"

[project.urls]
Homepage = "https://github.com/mldxo/uav-collision-avoidance"
Issues = "https://github.com/mldxo/uav-collision-avoidance/issues"

[tool.setuptools.packages.find]
where = [""]
