[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-collision-avoidance"
version = "0.9.1"
authors = [
  { name="mldxo", email="miloszmaculewicz@gmail.com" },
]
description = "UAV collision avoidance simulation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "setuptools",
  "wheel",
  "twine>=5.0.0",
  "toml>=0.10.2",
  "build>=1.2.1",
  "pyinstaller>=6.6.0",
  "PySide6==6.7.0",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "matplotlib>=3.8.4",
  "pytest>=8.1.1",
  "screeninfo>=0.8.1",
  "pylint>=3.2.0",
]

[project.scripts]
uav-collision-avoidance = "uav_collision_avoidance:main"

[project.urls]
Homepage = "https://github.com/mldxo/uav-collision-avoidance"
Issues = "https://github.com/mldxo/uav-collision-avoidance/issues"

[tool.setuptools.packages.find]
where = [""]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
